# Triangular-scanner-

./: Cargo.toml  README.md
src/: exchanges.rs  logic.rs  main rs  main.rs  models.rs  routes.rs  utils.rs  ws_manager.rs
src/exchanges/: binance.rs  bybit.rs  gateio.rs  kucoin.rs  mod.rs
static/: index.html
