[package]
name = "arbitrage-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# WebSockets + TLS via rustls
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots"] }

futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
once_cell = "1.19"
url = "2.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
